*prometheus-cpu-mem-monitor-0.0.0.1 (11 Nov 2019)

  11 Nov 2019;  <manuel@gentoo.org> +files/prometheus-cpu-mem-monitor.service,
  +files/prometheus-cpu-mem-monitor.sh, +files/prometheus-cpu-mem-monitor.timer,
  +metadata.xml, +prometheus-cpu-mem-monitor-0.0.0.1.ebuild:
  app-metrics/prometheus-cpu-mem-monitor: Add very first draft version